[FEAT/#5] 토큰 username -> userId 변경 및 검색 수정