@@ -1,15 +1,16 @@
 package com.season.livingmate.post.domain.repository;
 
+import com.season.livingmate.post.api.dto.req.PostSearchReq;
 import com.season.livingmate.post.domain.Post;
 import com.season.livingmate.post.domain.RoomType;
 import jakarta.persistence.criteria.Expression;
 import jakarta.persistence.criteria.Predicate;
 import org.springframework.data.jpa.domain.Specification;
 
+import java.util.ArrayList;
 import java.util.Collection;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 public final class PostSpecs {
 
@@ -23,9 +24,9 @@ public final class PostSpecs {
         );
     }
 
-    // 보증금
+    // 보증금 (둘 다 비었을 때만 무시)
     public static Specification<Post> depositBetween(Integer min, Integer max) {
-        if(min == null || max == null) return null;
+        if(min == null && max == null) return null;
 
         return (root, query, cb) -> {
             if(min != null && max != null)
@@ -39,7 +40,7 @@ public final class PostSpecs {
 
     // 월세 + 관리비
     public static Specification<Post> totalMonthlyCostBetween(Integer min, Integer max) {
-        if(min == null || max == null) return null;
+        if(min == null && max == null) return null;
 
         return (root, query, cb) -> {
 
@@ -64,27 +65,62 @@ public final class PostSpecs {
     }
 
     // 주소
-    public static Specification<Post> postStatus(String gu, Collection<String> dongList) {
-        if(gu == null || gu.isBlank() || dongList == null || dongList.isEmpty()) return null;
+    public static Specification<Post> locationContainsDong(Collection<String> dongs) {
+        if (dongs == null || dongs.isEmpty()) return null;
 
-        final String seoulLike = "%서울%";
-        final String guLike = "%" + gu.trim().toLowerCase() + "%";
-
-        final List<String> dongLikes = dongList.stream()
+        List<String> normalized = dongs.stream()
                 .filter(Objects::nonNull)
-                .map(s -> "%" + s.trim().toLowerCase() + "%")
-                .collect(Collectors.toList());
+                .map(String::trim)
+                .filter(s -> !s.isEmpty())
+                .map(String::toLowerCase)
+                .toList();
+
+        if(normalized.isEmpty()) return null;
 
         return (root, query, cb) -> {
-            Predicate pSeoul = cb.like(cb.lower(root.get("location")), seoulLike);
-            Predicate pGu = cb.like(cb.lower(root.get("location")), guLike);
-
-            List<Predicate> dongPreds = dongLikes.stream()
-                    .map(like -> cb.like(cb.lower(root.get("location")), like))
-                    .collect(Collectors.toList());
-
-            Predicate pDongOr = cb.or(dongPreds.toArray(new Predicate[0]));
-            return cb.and(pSeoul, pGu, pDongOr);
+            var loc = cb.lower(root.get("location"));
+            List<Predicate> ors = normalized.stream()
+                    .map(d -> "%" + d + "%")
+                    .map(pattern -> cb.like(loc, pattern))
+                    .toList();
+            return cb.or(ors.toArray(new Predicate[0]));
         };
+    }
+
+
+    public static Specification<Post> build(PostSearchReq req) {
+        return build(
+                req.keyword(),
+                req.minDeposit(),
+                req.maxDeposit(),
+                req.minMonthlyCost(),
+                req.maxMonthlyCost(),
+                req.roomTypes(),
+                req.dongs()
+        );
+    }
+
+    // 입력된 조건만 AND
+    public static Specification<Post> build(
+            String keyword,
+            Integer minDeposit,
+            Integer maxDeposit,
+            Integer minMonthlyCost,
+            Integer maxMonthlyCost,
+            Collection<RoomType> roomTypes,
+            Collection<String> dongs
+    ) {
+        List<Specification<Post>> parts = new ArrayList<>();
+        parts.add(keyword(keyword));
+        parts.add(depositBetween(minDeposit, maxDeposit));
+        parts.add(totalMonthlyCostBetween(minMonthlyCost, maxMonthlyCost));
+        parts.add(roomTypes(roomTypes));
+        parts.add(locationContainsDong(dongs));
+
+        parts.removeIf(Objects::isNull);
+
+        return parts.isEmpty()
+                ? (root, q, cb) -> cb.conjunction()   // 전체 조회
+                : Specification.allOf(parts);
     }
 }
